--- a/index.html
+++ b/index.html
@@ -30,6 +30,17 @@
 
     <!-- Mail Chimp  -->
     <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/6abd5f6724732dbe8855775f0/8e391505e2a4f7b26cae626c1.js");</script>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-176006803-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-176006803-1');
+  </script>
+  
 </head>
 
 <body>
