--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navLinks">
             <ul class="navbar-nav">
-                <li class="nav-item"><a href="#services" class="nav-link">SERVICES</a></li>
-                <li class="nav-item"><a href="#team" class="nav-link">TEAM</a></li>
-                <li class="nav-item"><a href="#contact" class="nav-link">CONTACT</a></li>
+                <li class="nav-item"><a href="#services-section" class="nav-link">SERVICES</a></li>
+                <li class="nav-item"><a href="#team-section" class="nav-link">TEAM</a></li>
+                <li class="nav-item"><a href="#contact-section" class="nav-link">CONTACT</a></li>
             </ul>
         </div>
     </nav>
@@ -74,7 +74,7 @@
     </section>
 
     <!-- SERVICE INFO SECTIONS -->
-    <h2 class="sec-header">SERVICES</h2>
+    <h2 class="sec-header" id="services-section">SERVICES</h2>
     <section class="container-fluid" id="services">
         <div class="row align-items-center">
             <div class="col-lg-6" id="vpd">
@@ -343,7 +343,7 @@
     </section>
 
      <!-- TEAM SECTION -->
-    <h2 class="sec-header">OUR TEAM</h2>
+    <h2 class="sec-header" id="team-section">OUR TEAM</h2>
     <section class="container-fluid" id="team">
         <div class="row align-items-center">
             <div class="col">
@@ -383,7 +383,7 @@
     </section>
 
 
-    <h2 class="sec-header">CONNECT WITH US</h2>
+    <h2 class="sec-header" id="contact-section">CONNECT WITH US</h2>
         <!-- SCHEDULE A CALL -->
         <h3 class="contact">Schedule a call with us</h3>
         <section class="container-fluid">
