--- a/index.html
+++ b/index.html
@@ -342,8 +342,9 @@
         </div>
     </section>
 
+    <p id="team-section"></p>
      <!-- TEAM SECTION -->
-    <h2 class="sec-header" id="team-section">OUR TEAM</h2>
+    <h2 class="sec-header">OUR TEAM</h2>
     <section class="container-fluid" id="team">
         <div class="row align-items-center">
             <div class="col">
@@ -382,8 +383,8 @@
         </div>
     </section>
 
-
-    <h2 class="sec-header" id="contact-section">CONNECT WITH US</h2>
+    <p id="contact-section"></p>
+    <h2 class="sec-header">CONNECT WITH US</h2>
         <!-- SCHEDULE A CALL -->
         <h3 class="contact">Schedule a call with us</h3>
         <section class="container-fluid">
