Add SampleWorks to Navigation Bar

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         <div class="collapse navbar-collapse" id="navLinks">
             <ul class="navbar-nav">
                 <li class="nav-item"><a href="#services-section" class="nav-link">SERVICES</a></li>
+                <li class="nav-item"><a href="#sample-section" class="nav-link">SAMPLE WORKS</a></li>
                 <li class="nav-item"><a href="#team-section" class="nav-link">TEAM</a></li>
                 <li class="nav-item"><a href="#contact-section" class="nav-link">CONTACT</a></li>
             </ul>
@@ -116,7 +117,7 @@
         </div>
     </section>
     
-    <h2 class="sec-header">SAMPLE WORKS</h2>
+    <h2 class="sec-header" id="sample-section">SAMPLE WORKS</h2>
     <!-- SAMPLE SECTION 1 -->
     <section class="container-fluid sample">
         <div class="row justify-content-center">
@@ -342,9 +343,8 @@
         </div>
     </section>
 
-    <p id="team-section"></p>
-     <!-- TEAM SECTION -->
-    <h2 class="sec-header">OUR TEAM</h2>
+    <!-- TEAM SECTION -->
+    <h2 class="sec-header" id="team-section">OUR TEAM</h2>
     <section class="container-fluid" id="team">
         <div class="row align-items-center">
             <div class="col">
@@ -383,8 +383,8 @@
         </div>
     </section>
 
-    <p id="contact-section"></p>
-    <h2 class="sec-header">CONNECT WITH US</h2>
+    <!-- CONNECT WITH US -->
+    <h2 class="sec-header" id="contact-section">CONNECT WITH US</h2>
         <!-- SCHEDULE A CALL -->
         <h3 class="contact">Schedule a call with us</h3>
         <section class="container-fluid">
