--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <p>Everyone has a story to tell.</p>
                     <p><span class="brand">DCH</span> is a one-stop facilitator of your audiovisual ideas.</p>
                     <p>Explore our services, sample works, and our team.</p>
-                    <p>let’s begin to bring your ideas to life.</p>
+                    <p>Let’s begin to bring your ideas to life.</p>
                 </div>
             </div>
         </div>
