--- a/team.html
+++ b/team.html
@@ -26,7 +26,7 @@
     <title>DIGITAL CONTENT HELIX</title>
 
     <!-- Icon -->
-    <link rel="icon" type="image/png" href="img/logo.png">
+    <link rel="icon" type="image/png" href="../img/logo.png">
 
     <!-- Mail Chimp  -->
     <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/6abd5f6724732dbe8855775f0/8e391505e2a4f7b26cae626c1.js");</script>
@@ -46,7 +46,7 @@
 <body>
     <!-- NAVIGATION BAR -->
     <nav id="mainNavbar" class="navbar navbar-light navbar-expand-md py-0 fixed-top">
-        <a href="index.html" id="home" class="navbar-brand"><img id="navbar-logo" src="img/logo-s.png" alt="DCH"></a>
+        <a href="index.html" id="home" class="navbar-brand"><img id="navbar-logo" src="img/logo-s.png" alt=""></a>
         <button class="navbar-toggler" data-toggle="collapse" data-target="#navLinks" aria-lable="Toggle Navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -60,106 +60,44 @@
         </div>
     </nav>
 
-    <!-- HEAD SECTION -->
-    <section class="container-fluid">
+    <!-- TEAM SECTION -->
+    <h2 class="sec-header" id="team-section">OUR TEAM</h2>
+    <section class="container-fluid" id="team">
         <div class="row align-items-center">
-            <div class="col-lg-12" id="head-sec">
-                <div class="sub-sec text-center d-lg-block" id="top-text">
-                    <p>Everyone has a story to tell.</p>
-                    <p><span class="brand">DCH</span> is a one-stop facilitator of your audiovisual ideas.</p>
-                    <p>Explore our services, sample works, and our team.</p>
-                    <p>Let’s begin to bring your ideas to life.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- INTRODUCTION VIDEO -->
-    <section class="container-fluid">
-        <div class="row align-items-center">
-            <div class="col-sm-1 col-lg-2 col-xl-3"></div>
-            <div class="col-sm-10 col-lg-8 col-xl-6" id="top-sec">
-                <div class="embed-responsive embed-responsive-3by1 col-lg-12 col-xl-12">
-                    <div class="embed-responsive embed-responsive-16by9">
-                        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/YtGCF0FcwuQ" allowfullscreen></iframe>
-                    </div>
-            </div>
-            <div class="col-sm-1 col-lg-2 col-xl-3"></div>
-        </div>
-    </section>
-
-    <!-- SERVICE INFO SECTIONS -->
-    <h2 class="sec-header" id="services-section">SERVICES</h2>
-    <section class="container-fluid" id="services">
-        <div class="row align-items-center">
-            <div class="col-lg-6" id="vpd">
-                <div class="sub-sec text-center d-lg-block" id="serv-sec-1">
-                    <i id="vpd-icon" class="fas fa-camera-retro service-icon"></i>
-                    <h2 class="serv-title">VIDEO / PHOTO / DESIGN</h2>
-                    <ul class="serv-info">
-                        <li>Multicam Videography</li>
-                        <li>Virtual Tours</li>
-                        <li>Video Editing</li>
-                        <li>Color Grading</li>
-                        <li>Storyboard</li>
-                        <li>Poster and Flyer</li>
-                        <li>CD Labels and Record Covers</li>
-                        <li>Photo Retouching</li>
-                        <li>Logo</li>
-                        <li>3D Modeling</li>
-                    </ul>
-                </div>
-            </div>
-            <div class="col-lg-6" id="sml">
-                <div class="sub-sec text-center d-lg-block" id="serv-sec-2">
-                    <i id="sml-icon" class="fas fa-icons"></i>
-                    <h2 class="serv-title">SOUND / MEDIA / LIVE</h2>
-                    <ul class="serv-info">
-                        <li>Sound Design and Editing</li>
-                        <li>Recording and Podcasting</li>
-                        <li>Music Production</li>
-                        <li>Mixing and Mastering</li>
-                        <li>Non-linear Music for Film and Video Games</li>
-                        <li>Music and Podcast Online Distribution</li>
-                        <li>Songwriting and Corporate Theme</li>
-                        <li>Orchestral Arrangement</li>
-                        <li>Music Engraving</li>
-                        <li>Live Music</li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- INFO -->
-    <section class="container-fluid">
-            <div class="row align-items-center">
-                <div class="col">
-                    <div class="sub-sec text-center d-lg-block">
-                        <!-- <i id="sml-icon" class="fas fa-icons"></i> -->
-                        <h2 class="sec-title" id="dch">DIGITAL CONTENT HELIX LLC</h2>
-                        <div class="info">
-                            <p>801 - 712 - 9242</p>
-                            <p>contact@digitalcontenthelix.com</p>
-                            <p>© Digital Content Helix LLC 2021. All Rights Reserved.</p>
+            <div class="col">
+                <div class="sub-sec text-center d-lg-block">
+                    <div class="row justify-content-center">
+                        <div class="col-lg-4 team-member">
+                            <img src="img/team/Audrey.jpg" alt="Audrey">
+                            <h3>AUDREY</h3>
+                            <p>Creative Content Strategy, Social Media, and Graphic Design</p>
                         </div>
-                        <div class="info-icon">
-                            <a href="https://www.facebook.com/DCHELIX/" target="_blank">
-                                <i class="fab fa-facebook"></i>
-                            </a>
-                            <a href="https://twitter.com/helix_llc" target="_blank">
-                                <i class="fab fa-twitter"></i>
-                            </a>
-                            <a href="https://www.instagram.com/digital_content_helix/" target="_blank">
-                                <i class="fab fa-instagram"></i>
-                            </a>
-                            <a href="https://www.linkedin.com/company/digital-content-helix-llc" target="_blank">
-                                <i class="fab fa-linkedin-in"></i>
-                            </a>
+                        <div class="col-lg-4 team-member">
+                            <img src="img/team/Ashkan.jpg" alt="Ashkan">
+                            <h3>ASHKAN</h3>
+                            <p>Sales Operations, Digital Marketing, and Composition</p>
+                        </div>
+                        <div class="col-lg-4 team-member">
+                            <img src="img/team/Daniel.jpg" alt="Daniel">
+                            <h3>DANIEL</h3>
+                            <p>Music Engraving, Online Streaming, and Email Marketing</p>
+                        </div>
+                    </div> 
+                    <div class="row justify-content-center">
+                        <div class="col-lg-4 team-member">
+                            <img src="img/team/Breann.jpg" alt="Breann">
+                            <h3>BREANN</h3>
+                            <p>Storyboard, Video Game 3D Modeling, Multimedia Artist</p>
+                        </div>
+                        <div class="col-lg-4 team-member">
+                            <img src="img/team/Alireza.jpg" alt="Alireza">
+                            <h3>ALIREZA</h3>
+                            <p>Sound Design, Advanced Editing, and Electronics</p>
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
     </section>
 
         
