--- a/sample.html
+++ b/sample.html
@@ -226,8 +226,7 @@
         <div class="row justify-content-center">
             <div class="sub-sec text-center d-lg-block">
                 <h2 class="sec-title">360º Concert Video</h2>
-                <p class="sec-detail">Can be viewed with VR goggles and other devices -please open the video in
-                    the YouTube app for mobile devices</p>
+                <p class="sec-detail"></p>
             </div>
         </div>
     </section>
