--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                         <li>Trailer and Teaser</li>
                         <li>Storyboard</li>
                         <li>Lighting and VR Projection</li>
-                        <li>CD Labels and Record Cover</li>
+                        <li>CD Label and Record Cover</li>
                         <li>PR and Social Media Still</li>
                         <li>Website Design</li>
                         <li>Virtual Tours</li>
