--- a/sample.html
+++ b/sample.html
@@ -313,7 +313,7 @@
     <section class="container-fluid sample">
         <div class="row justify-content-center">
             <div class="sub-sec text-center d-lg-block">
-                <h2 class="sec-title">Virtual Tours</h2>
+                <h2 class="sec-title">Virtual Tour</h2>
                 <p class="sec-detail"></p>
                 <!-- <p class="sec-detail">
                     <a href="https://music.utah.edu/about/facilities/index.php?fbclid=IwAR2V6qeJJ8lH1aX_XBpuIsWQiEnoDpZOzF7WCnvj0pT5S5auqh7qiS1yx3U"
