--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
         <div class="row align-items-center">
             <div class="col-lg-12" id="head-sec">
                 <div class="sub-sec text-center d-lg-block" id="top-text">
-                    <p>Everyone has a story to tell.</p>
-                    <p><span class="brand">DCH</span> is a one-stop facilitator of your audiovisual ideas.</p>
-                    <p>Explore our services, sample works, and our team.</p>
-                    <p>Let’s begin to bring your ideas to life.</p>
+                    <p>Everyone has a story to tell</p>
+                    <p><span class="brand">DCH</span> is a one-stop facilitator of your audiovisual ideas</p>
+                    <p>Explore our services, sample works, and our team</p>
+                    <p>Let’s begin to bring your ideas to life</p>
                 </div>
             </div>
         </div>
@@ -105,12 +105,13 @@
                         <li>Multicam Videography</li>
                         <li>Live Streaming</li>
                         <li>Trailer and Teaser</li>
-                        <li>Storyboard</li>
-                        <li>Lighting and VR Projection</li>
+                        <li>Light Design</li>
+                        <li>Augmented Reality Projection</li>
                         <li>CD Label and Record Cover</li>
                         <li>PR and Social Media Still</li>
                         <li>Website Design</li>
-                        <li>Virtual Tours</li>
+                        <li>Virtual Tour</li>
+                        <li>Storyboard</li>
                         <li>3D Modeling</li>
                     </ul>
                 </div>
@@ -123,13 +124,14 @@
                         <li>Sound Design and Editing</li>
                         <li>Recording and Podcasting</li>
                         <li>Music Production</li>
+                        <li>Session Producer</li>
                         <li>Mixing and Mastering</li>
                         <li>Non-linear Music for Film and Video Games</li>
                         <li>Music and Podcast Online Distribution</li>
                         <li>Songwriting and Corporate Theme</li>
                         <li>Orchestral Arrangement</li>
                         <li>Music Engraving</li>
-                        <li>Live Music</li>
+                        <li>Live Performance</li>
                     </ul>
                 </div>
             </div>
