--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                         <li>Light Design</li>
                         <li>Augmented Reality Projection</li>
                         <li>CD Label and Record Cover</li>
-                        <li>PR and Social Media Still</li>
+                        <li>PR and Social Media</li>
                         <li>Website Design</li>
                         <li>Virtual Tour</li>
                         <li>Storyboard</li>
