--- a/sample.html
+++ b/sample.html
@@ -115,7 +115,7 @@
     <section class="container-fluid sample">
         <div class="row justify-content-center">
             <div class="sub-sec text-center d-lg-block">
-                <h2 class="sec-title">Light Design and VR Projection</h2>
+                <h2 class="sec-title">Light Design and Projection Mapping</h2>
                 <p class="sec-detail"></p>
             </div>
         </div>
