--- a/sample.html
+++ b/sample.html
@@ -90,7 +90,7 @@
     </section>
 
     <!-- SAMPLE SECTION 2 -->
-    <section class="container-fluid sample">
+    <section class="container-fluid sample reveal">
         <div class="row justify-content-center">
             <div class="sub-sec text-center d-lg-block">
                 <h2 class="sec-title">Virtual Concert</h2>
@@ -98,7 +98,7 @@
             </div>
         </div>
     </section>
-    <section class="container-fluid">
+    <section class="container-fluid reveal">
         <div class="row align-items-center video">
             <div class="col-lg-2 col-xl-3"></div>
             <div class="embed-responsive embed-responsive-3by1 col-lg-8 col-xl-6">
@@ -112,15 +112,15 @@
     </section>
 
     <!-- SAMPLE SECTION 3 -->
-    <section class="container-fluid sample">
+    <section class="container-fluid sample reveal">
         <div class="row justify-content-center">
             <div class="sub-sec text-center d-lg-block">
-                <h2 class="sec-title">Light Design and Projection Mapping</h2>
+                <h2 class="sec-title">Light Design / Projection Mapping</h2>
                 <p class="sec-detail"></p>
             </div>
         </div>
     </section>
-    <section class="container-fluid">
+    <section class="container-fluid reveal">
         <div class="row align-items-center video">
             <div class="col-lg-2 col-xl-3"></div>
             <div class="embed-responsive embed-responsive-3by1 col-lg-8 col-xl-6">
@@ -134,7 +134,7 @@
     </section>
 
     <!-- SAMPLE SECTION 4 -->
-    <section class="container-fluid sample">
+    <section class="container-fluid sample reveal">
         <div class="row justify-content-center">
             <div class="sub-sec text-center d-lg-block">
                 <h2 class="sec-title">Interview</h2>
@@ -142,7 +142,7 @@
             </div>
         </div>
     </section>
-    <section class="container-fluid">
+    <section class="container-fluid reveal">
         <div class="row align-items-center video">
             <div class="col-lg-2 col-xl-3"></div>
             <div class="embed-responsive embed-responsive-3by1 col-lg-8 col-xl-6">
@@ -156,7 +156,7 @@
     </section>
 
     <!-- SAMPLE SECTION 5 -->
-    <section class="container-fluid sample">
+    <section class="container-fluid sample reveal">
         <div class="row justify-content-center">
             <div class="sub-sec text-center d-lg-block">
                 <h2 class="sec-title">Promotional Video</h2>
@@ -164,7 +164,7 @@
             </div>
         </div>
     </section>
-    <section class="container-fluid">
+    <section class="container-fluid reveal">
         <div class="row align-items-center video">
             <div class="col-lg-2 col-xl-3"></div>
             <div class="embed-responsive embed-responsive-3by1 col-lg-8 col-xl-6">
@@ -178,7 +178,7 @@
     </section>
 
     <!-- SAMPLE SECTION 6 -->
-    <section class="container-fluid sample">
+    <section class="container-fluid sample reveal">
         <div class="row justify-content-center">
             <div class="sub-sec text-center d-lg-block">
                 <h2 class="sec-title">Film Scoring</h2>
@@ -186,7 +186,7 @@
             </div>
         </div>
     </section>
-    <section class="container-fluid">
+    <section class="container-fluid reveal">
         <div class="row align-items-center video">
             <div class="col-lg-2 col-xl-3"></div>
             <div class="embed-responsive embed-responsive-3by1 col-lg-8 col-xl-6">
@@ -200,7 +200,7 @@
     </section>
 
     <!-- SAMPLE SECTION 7 -->
-    <section class="container-fluid sample">
+    <section class="container-fluid sample reveal">
         <div class="row justify-content-center">
             <div class="sub-sec text-center d-lg-block">
                 <h2 class="sec-title">Video Compilation</h2>
@@ -208,7 +208,7 @@
             </div>
         </div>
     </section>
-    <section class="container-fluid">
+    <section class="container-fluid reveal">
         <div class="row align-items-center video">
             <div class="col-lg-2 col-xl-3"></div>
             <div class="embed-responsive embed-responsive-3by1 col-lg-8 col-xl-6">
@@ -222,7 +222,7 @@
     </section>
 
     <!-- SAMPLE SECTION 8 -->
-    <section class="container-fluid sample">
+    <section class="container-fluid sample reveal">
         <div class="row justify-content-center">
             <div class="sub-sec text-center d-lg-block">
                 <h2 class="sec-title">360º Concert Video</h2>
@@ -230,7 +230,7 @@
             </div>
         </div>
     </section>
-    <section class="container-fluid">
+    <section class="container-fluid reveal">
         <div class="row align-items-center video">
             <div class="col-lg-2 col-xl-3"></div>
             <div class="embed-responsive embed-responsive-3by1 col-lg-8 col-xl-6">
@@ -244,7 +244,7 @@
     </section>
 
     <!-- SAMPLE SECTION 9 -->
-    <!-- <section class="container-fluid sample">
+    <!-- <section class="container-fluid sample reveal">
         <div class="row justify-content-center">
             <div class="sub-sec text-center d-lg-block">
                 <h2 class="sec-title">String Quartet</h2>
@@ -252,7 +252,7 @@
             </div>
         </div>
     </section>
-    <section class="container-fluid">
+    <section class="container-fluid reveal">
         <div class="row align-items-center video">
             <div class="col-lg-2 col-xl-3"></div>
             <div class="embed-responsive embed-responsive-3by1 col-lg-8 col-xl-6">
@@ -266,7 +266,7 @@
     </section> -->
 
     <!-- SAMPLE SECTION 10 -->
-    <!-- <section class="container-fluid sample">
+    <!-- <section class="container-fluid sample reveal">
         <div class="row justify-content-center">
             <div class="sub-sec text-center d-lg-block">
                 <h2 class="sec-title">3D Modeling</h2>
@@ -274,7 +274,7 @@
             </div>
         </div>
     </section>
-    <section class="container-fluid">
+    <section class="container-fluid reveal">
         <div class="row align-items-center video">
             <div class="col-lg-2 col-xl-3"></div>
             <div class="embed-responsive embed-responsive-3by1 col-lg-8 col-xl-6">
@@ -288,7 +288,7 @@
     </section> -->
 
     <!-- SAMPLE SECTION 11 -->
-    <!-- <section class="container-fluid sample">
+    <!-- <section class="container-fluid sample reveal">
         <div class="row justify-content-center">
             <div class="sub-sec text-center d-lg-block">
                 <h2 class="sec-title">Animation</h2>
@@ -296,7 +296,7 @@
             </div>
         </div>
     </section>
-    <section class="container-fluid">
+    <section class="container-fluid reveal">
         <div class="row align-items-center video">
             <div class="col-lg-2 col-xl-3"></div>
             <div class="embed-responsive embed-responsive-3by1 col-lg-8 col-xl-6">
@@ -310,7 +310,7 @@
     </section> -->
 
     <!-- SAMPLE SECTION 12 -->
-    <section class="container-fluid sample">
+    <section class="container-fluid sample reveal">
         <div class="row justify-content-center">
             <div class="sub-sec text-center d-lg-block">
                 <h2 class="sec-title">Virtual Tour</h2>
@@ -325,7 +325,7 @@
             </div>
         </div>
     </section>
-    <section class="container-fluid">
+    <section class="container-fluid reveal">
         <div class="row align-items-center video">
             <div class="col-lg-2 col-xl-3"></div>
             <div class="embed-responsive embed-responsive-3by1 col-lg-8 col-xl-6">
@@ -484,6 +484,51 @@
                     }, 'json');
                 });
         });
+    </script>
+
+    <!-- REVEAL SMOOTH TRANSITION -->
+    <script type="text/javascript">
+        window.addEventListener('scroll', reveal);
+
+        function reveal() {
+            var reveals = document.querySelectorAll('.reveal');
+
+            for (var i = 0; i < reveals.length; i++) {
+
+                var windowheight = window.innerHeight;
+                var revealtop = reveals[i].getBoundingClientRect().top;
+                var revealpoint = 150;
+
+                if (revealtop < windowheight - revealpoint) {
+                    reveals[i].classList.add('active');
+                }
+                else {
+                    reveals[i].classList.remove('active');
+                }
+            }
+        }
+    </script>
+    <!-- REVEALSTILL SMOOTH TRANSITION -->
+    <script type="text/javascript">
+        window.addEventListener('scroll', revealStill);
+
+        function revealStill() {
+            var reveals = document.querySelectorAll('.revealStill');
+
+            for (var i = 0; i < reveals.length; i++) {
+
+                var windowheight = window.innerHeight;
+                var revealtop = reveals[i].getBoundingClientRect().top;
+                var revealpoint = 150;
+
+                if (revealtop < windowheight - revealpoint) {
+                    reveals[i].classList.add('active');
+                }
+                else {
+                    reveals[i].classList.remove('active');
+                }
+            }
+        }
     </script>
 
 </body>
