--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
     </section>
 
     <!-- SERVICE INFO SECTIONS -->
-    <h2 class="sec-header reveal" id="services-section">SERVICES</h2>
+    <h2 class="sec-header revealStill" id="services-section">SERVICES</h2>
     <section class="container-fluid" id="services">
         <div class="row align-items-center">
-            <div class="col-lg-6 reveal" id="vpd">
+            <div class="col-lg-6 revealStill" id="vpd">
                 <div class="sub-sec text-center d-lg-block" id="serv-sec-1">
                     <i id="vpd-icon" class="fas fa-camera-retro service-icon"></i>
                     <h2 class="serv-title">VIDEO / LIGHT / WEBSITE</h2>
@@ -116,7 +116,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="col-lg-6 reveal" id="sml">
+            <div class="col-lg-6 revealStill" id="sml">
                 <div class="sub-sec text-center d-lg-block" id="serv-sec-2">
                     <i id="sml-icon" class="fas fa-icons"></i>
                     <h2 class="serv-title">SOUND / MUSIC / LIVE</h2>
@@ -139,7 +139,7 @@
     </section>
 
     <!-- INFO -->
-    <section class="container-fluid reveal">
+    <section class="container-fluid revealStill">
         <div class="row align-items-center">
             <div class="col">
                 <div class="sub-sec text-center d-lg-block">
