removed "reveal" slow transition

--- a/connect.html
+++ b/connect.html
@@ -329,7 +329,7 @@
     </script>
 
     <!-- REVEAL SMOOTH TRANSITION -->
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
         window.addEventListener('scroll', reveal);
 
         function reveal() {
@@ -349,9 +349,9 @@
                 }
             }
         }
-    </script>
+    </script> -->
     <!-- REVEALSTILL SMOOTH TRANSITION -->
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
         window.addEventListener('scroll', revealStill);
 
         function revealStill() {
@@ -371,7 +371,7 @@
                 }
             }
         }
-    </script>
+    </script> -->
 
 </body>
 
