--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
     </script>
 
     <!-- REVEAL SMOOTH TRANSITION -->
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
         window.addEventListener('scroll', reveal);
 
         function reveal() {
@@ -337,9 +337,9 @@
                 }
             }
         }
-    </script>
+    </script> -->
     <!-- REVEALSTILL SMOOTH TRANSITION -->
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
         window.addEventListener('scroll', revealStill);
 
         function revealStill() {
@@ -359,7 +359,7 @@
                 }
             }
         }
-    </script>
+    </script> -->
 
 </body>
 
