--- a/sample.html
+++ b/sample.html
@@ -487,7 +487,7 @@
     </script>
 
     <!-- REVEAL SMOOTH TRANSITION -->
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
         window.addEventListener('scroll', reveal);
 
         function reveal() {
@@ -507,9 +507,9 @@
                 }
             }
         }
-    </script>
+    </script> -->
     <!-- REVEALSTILL SMOOTH TRANSITION -->
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
         window.addEventListener('scroll', revealStill);
 
         function revealStill() {
@@ -529,7 +529,7 @@
                 }
             }
         }
-    </script>
+    </script> -->
 
 </body>
 
