--- a/team.html
+++ b/team.html
@@ -252,7 +252,7 @@
     </script>
 
     <!-- REVEAL SMOOTH TRANSITION -->
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
         window.addEventListener('scroll', reveal);
 
         function reveal() {
@@ -272,9 +272,9 @@
                 }
             }
         }
-    </script>
+    </script> -->
     <!-- REVEALSTILL SMOOTH TRANSITION -->
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
         window.addEventListener('scroll', revealStill);
 
         function revealStill() {
@@ -294,7 +294,7 @@
                 }
             }
         }
-    </script>
+    </script> -->
 
 </body>
 
